# SoulseekCleanerCli

./: .gitignore  README.md  pyproject.toml
soulseek_cleaner/: __init__.py  cli.py
tests/: test_cli.py
